Add product API docs
