# abantecart/abc/controllers/storefront/api/product/product.php
@@ -35,16 +35,86 @@ use abc\core\engine\AResource;
 class ControllerApiProductProduct extends AControllerAPI
 {
 
+    /**
+     * @OA\Get (
+     *     path="/index.php/?rt=a/product/product",
+     *     summary="Get product",
+     *     description="Get product details",
+     *     tags={"Product"},
+     *     security={{"apiKey":{}}},
+     *     @OA\Parameter(
+     *         name="product_id",
+     *         in="query",
+     *         required=true,
+     *         description="Product unique Id",
+     *        @OA\Schema(
+     *              type="integer"
+     *          ),
+     *      ),
+     *    @OA\Parameter(
+     *         name="language_id",
+     *         in="query",
+     *         required=true,
+     *         description="Language Id",
+     *        @OA\Schema(
+     *              type="integer"
+     *          ),
+     *      ),
+     *      @OA\Parameter(
+     *         name="store_id",
+     *         in="query",
+     *         required=true,
+     *         description="Store Id",
+     *     @OA\Schema(
+     *              type="integer"
+     *          ),
+     *      ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Product data",
+     *         @OA\JsonContent(ref="#/components/schemas/ProductModel"),
+     *     ),
+     *     @OA\Response(
+     *         response="400",
+     *         description="Bad Request",
+     *         @OA\JsonContent(ref="#/components/schemas/ApiErrorResponse"),
+     *     ),
+     *     @OA\Response(
+     *         response="403",
+     *         description="Access denight",
+     *         @OA\JsonContent(ref="#/components/schemas/ApiErrorResponse"),
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="Not Found",
+     *         @OA\JsonContent(ref="#/components/schemas/ApiErrorResponse"),
+     *     ),
+     *      @OA\Response(
+     *         response="500",
+     *         description="Server Error",
+     *         @OA\JsonContent(ref="#/components/schemas/ApiErrorResponse"),
+     *     )
+     * )
+     *
+     */
     public function get()
     {
+        //TODO: Add support store_id and language_id
+        //TODO: Remove old models usage.
+        //TODO: Change Error response to standart
+        //TODO: How to get price for customer? Discounts?
+
         $this->extensions->hk_InitData($this, __FUNCTION__);
         $request = $this->rest->getRequestParams();
 
         $product_id = $request['product_id'];
 
         if (empty($product_id) || !is_numeric($product_id)) {
-            $this->rest->setResponseData(array('Error' => 'Missing or incorrect format product ID'));
-            $this->rest->sendResponse(200);
+            $this->rest->setResponseData([
+                'error_code' => 400,
+                'error_text' => 'Bad request',
+            ]);
+            $this->rest->sendResponse(400);
             return null;
         }
 
@@ -52,8 +122,11 @@ class ControllerApiProductProduct extends AControllerAPI
         $this->loadModel('catalog/product');
         $product_info = $this->model_catalog_product->getProduct($product_id);
         if (count($product_info) <= 0) {
-            $this->rest->setResponseData(array('Error' => 'No product found'));
-            $this->rest->sendResponse(200);
+            $this->rest->setResponseData([
+                'error_code' => 404,
+                'error_text' => 'Product not found',
+            ]);
+            $this->rest->sendResponse(404);
             return null;
         }
         //load resource library
